testcases/pos/type/fun_return_can_fail.bard
let fun f(): Int = if true then 2 else "hello"
in
    42
end
