testcases/neg/eval/fun_if_ret_unit.bard
let fun f(x: Int): Bool =
        if x == 42 then true
in
    f(10)
end
